# pygindex

./: .codeclimate.yml  .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  main.yml
docs/: api.rst  cli.rst  cli_user.rst  conf.py  index.rst  installation.rst  models.rst  modules.rst  pygindex.rst  requirements.txt
src/pygindex/: __init__.py  cli.py  client.py  models.py  utils.py
src/pygindex/templates/: cli_get_account.j2  cli_get_instrument.j2  cli_get_positions.j2  cli_search_instrument.j2
tests/: test_cli.py  test_client_igapiconfig.py  test_client_igclient.py  test_client_iguserauth.py  test_test.py  test_utils.py
